# C_Playground

./: .gitignore  CMakeLists.txt  C_Playground.kdev4  README.md
CPP/: CMakeLists.txt  main.cpp
books/: CMakeLists.txt  erf
boost_learn/boost_asio_part_2/: CMakeLists.txt
boost_learn/boost_asio_part_2/include/: main.hpp
boost_learn/boost_asio_part_2/src/: main.cpp  server.cpp
boost_learn/boost_asio_part_3/: CMakeLists.txt
boost_learn/boost_part_1/: CMakeLists.txt
boost_learn/boost_part_1/src/: accept_connection.cpp  binding_socket_to_ep.cpp
c_in_a_nut/begin/: main.c
c_in_a_nut/pipes/: main  main.c
c_rem/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.h
c_rem/cp/: main.c
c_rem/phase_1/: CMakeLists.txt  main  main.c
c_rem/pointers/: CMakeLists.txt  main.c  main.h  sample.asm
c_rem/strings/: CMakeLists.txt  main.c  main.h
cmake_cookbook/r1/: CMakeLists.txt  Message.hpp
cmake_cookbook/r8/: CMakeLists.txt  compute-areas.cpp  geometry_rhombus.cpp  geometry_square.h
cmake_cookbook/r9/: CMakeLists.txt  animal.cpp  animal.h
databases/postgres_protocol/: CMakeLists.txt
databases/sq_lite/: CMakeLists.txt
debugger/: CMakeLists.txt  debugger.cpp  debugger.h  main.cpp  main.h
experiments/experiments_with_go/: CMakeLists.txt
experiments/experiments_with_go/include/: main.hpp
experiments/experiments_with_go/src/: client
fundamentals/: CMakeLists.txt
fundamentals/classes/: CMakeLists.txt  JustClassName.cpp  JustClassName.h
fundamentals/deducing_types/: CMakeLists.txt  main.cpp  main.h
fundamentals/modules/: CMakeLists.txt  user.cpp  vector.cpp
geeksforgeeks/course/: CMakeLists.txt  binary_search.c  binary_search.h  main.c  main.h
google-tests/: CMakeLists.txt  main.c  main.h
gtk/: CMakeLists.txt  helloworld.cpp  helloworld.h  main.cpp
high_perf_cpp_book/: CMakeLists.txt
high_perf_cpp_book/include/: main.hpp  recource_acquisition.hpp
high_perf_cpp_book/src/: lambda.cpp
http_server/: CMakeLists.txt  main.h
infrastructure/GRPC/: CMakeLists.txt
infrastructure/GRPC/include/: grpc_client.hpp
infrastructure/GRPC/proto/: greeter.grpc.pb.cc  greeter.grpc.pb.h  greeter.pb.cc
infrastructure/GRPC/src/: grpc_client.cpp
ipc/: main.c
linux_kernel/kernel_experiments/: CMakeLists.txt
linux_sources/: CMakeLists.txt
memory_alloc/: main.c
modern_assembly/: CMakeLists.txt  Ch02_01.asm  main.cpp
multithreading/: CMakeLists.txt
multithreading/include/: hello_multithreading_world.hpp  waiting_for_finish.hpp
multithreading/src/chapter_1_2/: background_task.cpp
multithreading/src/chapter_3_sharing_data/: accidentally_passing_out_a_reference.cpp  protecting_list.cpp
opencv_tests/: CMakeLists.txt  main.cpp  video.cpp
php_ffi/src/: main.cpp
qt_sample/: CMakeLists.txt  blockingclient.cpp  blockingclient.h  fortunethread.cpp  fortunethread.h  main.cpp
sapi/: Makefile  main  main.c
scr/CPP/: main.h
scr/books/: main.h
scr/compiler/: main.c
scr/high_perf_cpp_book/: CMakeLists.txt
scr/linux_sources/: script.h
scr/memory_alloc/: CMakeLists.txt
scr/opencv_tests/: video.h
scr/script_linux/: ptyFork.c  recorder.c
scr/sq_lite/: CMakeLists.txt
scr/tcp/: main.h
scr/time/: main.c
scr/walker/: CMakeLists.txt  walker.cpp  (+1 more)
script_linux/: CMakeLists.txt  main.c  main.h  ptyFork.c  ptyFork.h  pty_master_open.c  pty_master_open.h  recorder.c  recorder.h  replay.c  replay.h
session_recorder/: CMakeLists.txt  ttyplay.1  ttyplay.c  ttyrec  ttyrec.c  ttytime.1  ttytime.c
shared_memory/: CMakeLists.txt
src/boost_learn/: CMakeLists.txt
src/boost_learn/boost_asio_part_2/: CMakeLists.txt
src/boost_learn/boost_asio_part_2/include/: client.hpp  server.hpp
src/boost_learn/boost_asio_part_2/src/: client.cpp  main.cpp  server.cpp
src/boost_learn/boost_asio_part_3/: CMakeLists.txt
src/boost_learn/boost_asio_part_3/src/: client.cpp  server.cpp
src/boost_learn/boost_part_1/: CMakeLists.txt
src/boost_learn/boost_part_1/src/: accept_connection.cpp  client.cpp  server.cpp
src/boost_learn/include/: client.hpp  server.hpp
src/boost_learn/src/: accept_connection.cpp  active_socket.cpp  client.cpp  passive_socket.cpp
src/cmake_cookbook/: CMakeLists.txt  Message.cpp  hello-world.cpp
src/cmake_cookbook/r1/: Message.cpp
src/cmake_cookbook/r8/: CMakeLists.txt  compute-areas.cpp  compute-areas.h  geometry_circle.cpp  geometry_circle.h  geometry_polygon.cpp  geometry_polygon.h  geometry_rhombus.h  geometry_square.cpp
src/http_server/: CMakeLists.txt  fast_server.cpp  main.c
src/infrastructure/GRPC/: CMakeLists.txt  Makefile
src/infrastructure/GRPC/include/: grpc.hpp
src/infrastructure/GRPC/proto/: greeter.pb.h  greeter.proto
src/infrastructure/GRPC/src/: grpc.cpp  grpc_server.cpp
src/linux_kernel/script_linux/: CMakeLists.txt  replay.c
src/multithreading/: CMakeLists.txt
src/multithreading/include/: hello_multithreading_world.hpp  joining_threads.hpp
src/multithreading/src/: RAII.cpp  detached_threads.cpp  hello_multithreading_world.cpp  joining_threads.cpp  lifetime_mistake.cpp  parallel_accumulate.cpp  waiting_for_finish.cpp
src/multithreading/src/chapter_1_2/: hello_multithreading_world.cpp  joining_threads.cpp  waiting_for_finish.cpp
src/multithreading/src/chapter_3_sharing_data/: accidentally_passing_out_a_reference.cpp  protecting_list.cpp
src/own_tools/walker/: CMakeLists.txt  walker.cpp
src/own_tools/walker/include/: Walker.hpp
src/own_tools/walker/src/: Walker.cpp  main.cpp
src/php_ffi/: CMakeLists.txt
src/php_ffi/include/: main.hpp
src/php_ffi/src/: main.cpp
src/programming_parallel_computers/: CMakeLists.txt
src/programming_parallel_computers/include/: main.hpp
src/programming_parallel_computers/src/: main.cpp
syscall/: CMakeLists.txt  main.c
tcp/: main.c
test_make_shared/: CMakeLists.txt
time/: test.asm
tty_record/: CMakeLists.txt  ttyrec.c
tty_replay/: CMakeLists.txt
wasm/: CMakeLists.txt  hello3.html  hello3.js  hello3.wasm  main.cpp
wasm/public/: wasm.html  wasm.js  wasm.wasm
writing_os/: bootloader.asm  main.c  main.h
(+78 files in other folders)
