cmake_minimum_required(VERSION 3.14)
project(playground)
set(CMAKE_CXX_STANDARD 17)

find_package(Boost 1.71 COMPONENTS REQUIRED)
find_package(Threads)

include_directories( ${Boost_INCLUDE_DIR} )

add_subdirectory(src/books)
add_subdirectory(src/c_rem)
add_subdirectory(src/compiler)
add_subdirectory(src/CPP)
add_subdirectory(src/geeksforgeeks)
add_subdirectory(src/http_server)
add_subdirectory(src/ipc)
add_subdirectory(src/linux_sources)
add_subdirectory(src/memory_alloc)
add_subdirectory(src/opencv_tests)
add_subdirectory(src/pids)
add_subdirectory(src/script_linux)
add_subdirectory(src/sq_lite)
add_subdirectory(src/syscall)
add_subdirectory(src/tcp)
add_subdirectory(src/time)
add_subdirectory(src/tty_record)
add_subdirectory(src/tty_replay)
add_subdirectory(src/writing_os)
add_subdirectory(src/high_perf_cpp_book)
add_subdirectory(src/walker)
add_subdirectory(src/boost_learn/boost_part_1)
add_subdirectory(src/boost_learn/boost_asio_part_2)
