cmake_minimum_required(VERSION 3.17)
project(playground)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS -pthread)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Boost 1.71 COMPONENTS REQUIRED)
find_package(Threads)

find_program(CCACHE_FOUND ccache)
if(CCACHE_FOUND)
    message("CCACHE FOUND")
    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
endif(CCACHE_FOUND)

include_directories( ${Boost_INCLUDE_DIR} )

add_subdirectory(src/geeksforgeeks)
add_subdirectory(src/linux_kernel/linux_sources)
add_subdirectory(src/linux_kernel/script_linux)
add_subdirectory(src/databases/sq_lite)
add_subdirectory(src/linux_kernel/tty/tty_record)
add_subdirectory(src/linux_kernel/tty/tty_replay)
add_subdirectory(src/high_perf_cpp_book)
add_subdirectory(src/own_tools/walker)
add_subdirectory(src/boost_learn/boost_part_1)
add_subdirectory(src/boost_learn/boost_asio_part_2)
add_subdirectory(src/linux_kernel/kernel_experiments)
add_subdirectory(src/boost_learn/boost_asio_part_3)
add_subdirectory(src/experiments/experiments_with_go)
add_subdirectory(src/databases/postgres_protocol)
add_subdirectory(src/basics)
add_subdirectory(src/multithreading)
add_subdirectory(src/infrastructure/GRPC)
add_subdirectory(src/programming_parallel_computers)
add_subdirectory(src/php_ffi)
add_subdirectory(src/shared_memory)
add_subdirectory(src/cmake_cookbook)