cmake_minimum_required(VERSION 3.30)

project(boost_learn)
set(CMAKE_CXX_STANDARD 20)
set(Boost_USE_MULTITHREADED ON)
SET(CMAKE_CXX_FLAGS -pthread)

add_executable(boost_client src/client.cpp)
add_executable(boost_server src/server.cpp)
add_executable(active_socket src/active_socket.cpp)
add_executable(passive_socket src/passive_socket.cpp)
add_executable(binding_socket_to_ep src/binding_socket_to_ep.cpp)
add_executable(accept_connection src/accept_connection.cpp)

target_link_libraries(binding_socket_to_ep LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(boost_client LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(boost_server LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(active_socket LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(passive_socket LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(accept_connection LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})