project(boost_learn)
set(CMAKE_CXX_STANDARD 20)
set(Boost_USE_MULTITHREADED ON)
add_executable(boost_client src/client.cpp)
add_executable(boost_server src/server.cpp)
add_executable(active_socket src/active_socket.cpp)
add_executable(passive_socket src/passive_socket.cpp)

target_link_libraries(boost_client LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(boost_server LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(active_socket LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
target_link_libraries(passive_socket LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})